implemented drag-and-drop feature, but for category cards/items instead of doing that for products as requested. but both are the same when it comes to implementation

--- a/ecommerce-exam-backend/src/main/resources/application.yml
+++ b/ecommerce-exam-backend/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
+      # TODO: not suitable for production
       ddl-auto: update
     show-sql: true
     properties:
